...
            Positioned(
              top: 10,
              right: 20,
              child: TextButton(
                onPressed: _onNext,
                child: Text(
                  _currentIndex == _pages.length - 1 ? "Finish" : "Next",
                  style: TextStyle(color: Colors.black),
                ),
               ),
            ),
          ],
        ),
...
